Сверстал шапку и подвал + первый экран

--- a/css/parts/_variables.scss
+++ b/css/parts/_variables.scss
@@ -1,12 +1,17 @@
 :root {
-    // colors 
+    // colors
     --color-1: #ffffff;
     --color-2: #F4F7FB;
 
     --color-3: #0A7CCB;
     --color-4: #18428C;
-    
+
     --color-5: #3B4356;
 
+    --color-6: #E5E5E5;
+    --color-7: #7A808D;
+
     --font-1: 'Inter', sans-serif;
+
+    --radius-1: 8px;
 }
