--- a/css/parts/_globals.scss
+++ b/css/parts/_globals.scss
@@ -30,7 +30,7 @@ body {
     min-width: 320px;
     font-style: normal;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     font-weight: 400;
     color: var(--color-5);
     text-transform: initial;
