--- a/css/main.scss
+++ b/css/main.scss
@@ -6,22 +6,20 @@
 @import "parts/globals";
 @import "parts/supports";
 @import "parts/special";
-
 @import "feauteres/sticky-footer";
 @import "feauteres/reverse-section";
 
-// sections
-@import "sections/header";
-
-@import "sections/hero";
-
-@import "sections/footer";
-
 // blocks
 @import "blocks/wrapper";
-
-
 @import "blocks/button";
 @import "blocks/logo";
-
+@import "blocks/title";
 @import "blocks/flex-list";
+
+// sections
+@import "sections/header";
+@import "sections/hero";
+@import "sections/servises";
+@import "sections/brands";
+@import "sections/contacts";
+@import "sections/footer";
