--- a/css/parts/_special.scss
+++ b/css/parts/_special.scss
@@ -2,6 +2,10 @@
   border-top: 1px solid var(--color-6);
 }
 
+.bb {
+  border-bottom: 1px solid var(--color-6);
+}
+
 .pb {
   padding-bottom: 49px;
 }
