--- a/css/main.scss
+++ b/css/main.scss
@@ -23,3 +23,8 @@
 @import "sections/brands";
 @import "sections/contacts";
 @import "sections/footer";
+
+.map {
+  width: 1024px;
+  height: 350px;
+}
