--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,8 @@
 @import "sections/footer";
 
 .map {
-  width: 1024px;
-  height: 350px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 10;
 }
