--- a/css/blocks/_wrapper.scss
+++ b/css/blocks/_wrapper.scss
@@ -7,8 +7,8 @@
     max-width: calc(688px + 40px + 40px);
   }
 
-  @media (max-width: 375px) {
-    max-width: calc(335px + 20px + 20px);
+  @media (max-width: 425px) {
+    max-width: 100%;
     padding: 0 20px;
   }
 }
