--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -7,3 +7,21 @@
     overflow: hidden;
   }
 }
+
+@media (max-width: 425px) {
+  .hero {
+
+    &__img {
+      height: 100%;
+      border-radius: 0;
+      min-height: 375px;
+    }
+
+    .wrapper {
+      max-width: 100%;
+      height: 100%;
+      padding: 0;
+
+    }
+  }
+}
